--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "js-data-firebase",
   "description": "Firebase adapter for js-data.",
-  "version": "0.1.0",
+  "version": "0.4.0",
   "homepage": "http://www.js-data.io/js-data-firebase",
   "repository": {
     "type": "git",
@@ -30,10 +30,10 @@
     "karma.start.js"
   ],
   "peerDependencies": {
-    "js-data": "0.0.1"
+    "js-data": "~0.4.x"
   },
   "devDependencies": {
     "firebase": "~1.0.21",
-    "js-data": "~0.0.1"
+    "js-data": "~0.4.x"
   }
 }
