--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-data-firebase",
-  "description": "My Adapter.",
-  "version": "0.1.0",
+  "description": "Firebase adapter for js-data.",
+  "version": "0.4.0",
   "homepage": "http://www.js-data.io/js-data-firebase",
   "repository": {
     "type": "git",
@@ -17,38 +17,46 @@
       "url": "https://github.com/js-data/js-data-firebase/blob/master/LICENSE"
     }
   ],
+  "keywords": [
+    "data",
+    "datastore",
+    "store",
+    "database",
+    "adapter",
+    "firebase"
+  ],
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-browserify": "^3.0.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.5.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-karma": "^0.8.3",
-    "grunt-karma-coveralls": "^2.5.1",
-    "karma": "^0.12.23",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.1.4",
-    "karma-coverage": "^0.2.6",
-    "karma-script-launcher": "^0.1.0",
-    "karma-firefox-launcher": "^0.1.3",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-mocha": "^0.1.9",
-    "karma-sinon": "^1.0.3",
-    "karma-spec-reporter": "^0.0.13",
-    "time-grunt": "^1.0.0",
-    "jit-grunt": "^0.8.0"
+    "grunt": "0.4.5",
+    "grunt-browserify": "3.0.0",
+    "grunt-contrib-clean": "0.6.0",
+    "grunt-contrib-concat": "0.5.0",
+    "grunt-contrib-copy": "0.5.0",
+    "grunt-contrib-jshint": "0.10.0",
+    "grunt-contrib-uglify": "0.5.1",
+    "grunt-contrib-watch": "0.6.1",
+    "grunt-karma": "0.8.3",
+    "grunt-karma-coveralls": "2.5.1",
+    "karma": "0.12.23",
+    "karma-chai": "0.1.0",
+    "karma-chrome-launcher": "0.1.4",
+    "karma-coverage": "0.2.6",
+    "karma-script-launcher": "0.1.0",
+    "karma-firefox-launcher": "0.1.3",
+    "karma-phantomjs-launcher": "0.1.4",
+    "karma-mocha": "0.1.9",
+    "karma-sinon": "1.0.3",
+    "karma-spec-reporter": "0.0.13",
+    "time-grunt": "1.0.0",
+    "jit-grunt": "0.8.0"
   },
   "scripts": {
     "test": "grunt test"
   },
   "peerDependencies": {
-    "js-data": "0.0.1"
+    "js-data": "~0.3.x"
   },
   "dependencies": {
-    "es6-promise": "^1.0.0",
-    "mout": "^0.10.0"
+    "es6-promise": "1.0.0",
+    "mout": "0.10.0"
   }
 }
