--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
   "name": "js-data-firebase",
   "description": "Firebase adapter for js-data.",
-  "version": "0.4.3",
-  "homepage": "http://www.js-data.io/js-data-firebase",
+  "version": "1.0.0-alpha.1",
+  "homepage": "http://www.js-data.io/docs/dsfirebaseadapter",
   "repository": {
     "type": "git",
-    "url": "git://github.com/js-data/js-data-firebase.git"
+    "url": "https://github.com/js-data/js-data-firebase.git"
   },
   "author": {
     "name": "Jason Dobry",
