--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "js-data-firebase",
   "description": "Firebase adapter for js-data.",
-  "version": "0.4.3",
-  "homepage": "http://www.js-data.io/js-data-firebase",
+  "version": "1.0.0-alpha.1",
+  "homepage": "http://www.js-data.io/docs/dsfirebaseadapter",
   "repository": {
     "type": "git",
     "url": "https://github.com/js-data/js-data-firebase.git"
