--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "url": "http://www.pseudobry.com",
     "email": "jason.dobry@gmail.com"
   },
-  "main": "./dist/js-data-firebase.min.js",
+  "main": "./dist/js-data-firebase.js",
   "ignore": [
     ".idea/",
     ".*",
@@ -29,7 +29,7 @@
     "karma.start.js"
   ],
   "dependencies": {
-    "js-data": "~1.0.x",
+    "js-data": ">=1.0.0",
     "firebase": "~1.1.x"
   }
 }
