--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,7 @@
     "karma.start.js"
   ],
   "dependencies": {
-    "js-data": ">=1.0.0",
-    "firebase": "~1.1.x"
+    "js-data": ">=1.2.0",
+    "firebase": ">=1.1.x"
   }
 }
