--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-data-firebase",
   "description": "Firebase adapter for js-data.",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "homepage": "http://www.js-data.io/docs/dsfirebaseadapter",
   "repository": {
     "type": "git",
@@ -29,10 +29,10 @@
   "main": "./src/index.js",
   "devDependencies": {
     "grunt": "0.4.5",
-    "grunt-browserify": "3.3.0",
+    "grunt-browserify": "3.4.0",
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-jshint": "0.11.0",
-    "grunt-contrib-uglify": "0.7.0",
+    "grunt-contrib-uglify": "0.8.0",
     "grunt-contrib-watch": "0.6.1",
     "grunt-karma": "0.10.1",
     "grunt-karma-coveralls": "2.5.3",
@@ -46,7 +46,7 @@
     "karma-mocha": "0.1.10",
     "karma-sinon": "1.0.4",
     "karma-spec-reporter": "0.0.16",
-    "time-grunt": "1.0.0",
+    "time-grunt": "1.1.0",
     "jit-grunt": "0.9.1"
   },
   "scripts": {
@@ -54,7 +54,7 @@
   },
   "dependencies": {
     "mout": "0.11.0",
-    "js-data": ">=1.0.0",
-    "firebase": "~2.1.x"
+    "js-data": ">=1.2.0",
+    "firebase": ">=1.1.x"
   }
 }
