--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-data-firebase",
   "description": "Firebase adapter for js-data.",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "homepage": "http://www.js-data.io/docs/dsfirebaseadapter",
   "repository": {
     "type": "git",
@@ -26,35 +26,42 @@
     "adapter",
     "firebase"
   ],
-  "main": "./src/index.js",
+  "main": "./dist/js-data-firebase.js",
   "devDependencies": {
+    "babel-core": "4.7.16",
+    "babel-loader": "4.2.0",
     "grunt": "0.4.5",
-    "grunt-browserify": "3.4.0",
     "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-jshint": "0.11.0",
     "grunt-contrib-uglify": "0.8.0",
     "grunt-contrib-watch": "0.6.1",
     "grunt-karma": "0.10.1",
     "grunt-karma-coveralls": "2.5.3",
+    "grunt-webpack": "1.0.8",
+    "jit-grunt": "0.9.1",
+    "jshint": "2.6.3",
+    "jshint-loader": "0.8.3",
     "karma": "0.12.31",
     "karma-chai": "0.1.0",
     "karma-chrome-launcher": "0.1.7",
     "karma-coverage": "0.2.7",
-    "karma-script-launcher": "0.1.0",
     "karma-firefox-launcher": "0.1.4",
-    "karma-phantomjs-launcher": "0.1.4",
     "karma-mocha": "0.1.10",
+    "karma-phantomjs-launcher": "0.1.4",
+    "karma-script-launcher": "0.1.0",
     "karma-sinon": "1.0.4",
     "karma-spec-reporter": "0.0.16",
     "time-grunt": "1.1.0",
-    "jit-grunt": "0.9.1"
+    "webpack": "1.7.3",
+    "webpack-dev-server": "1.7.0"
   },
   "scripts": {
     "test": "grunt test"
   },
   "dependencies": {
-    "mout": "0.11.0",
-    "js-data": ">=1.2.0",
-    "firebase": ">=1.1.x"
+    "mout": "0.11.0"
+  },
+  "peerDependencies": {
+    "js-data": ">= 1.5.7",
+    "firebase": ">= 1.1.x"
   }
 }
