--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,7 @@
     "karma.start.js"
   ],
   "dependencies": {
-    "js-data": ">=1.5.7",
+    "js-data": ">=2.0.0-beta.3",
     "firebase": ">=1.1.x"
   }
 }
