--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-data-firebase",
   "description": "Firebase adapter for js-data.",
-  "version": "1.1.1",
+  "version": "2.0.0-beta.1",
   "homepage": "http://www.js-data.io/docs/dsfirebaseadapter",
   "repository": {
     "type": "git",
@@ -28,31 +28,31 @@
   ],
   "main": "./dist/js-data-firebase.js",
   "devDependencies": {
-    "babel-core": "4.7.16",
-    "babel-loader": "4.2.0",
+    "babel-core": "5.1.10",
+    "babel-loader": "5.0.0",
     "grunt": "0.4.5",
     "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-uglify": "0.8.0",
+    "grunt-contrib-uglify": "0.9.1",
     "grunt-contrib-watch": "0.6.1",
     "grunt-karma": "0.10.1",
     "grunt-karma-coveralls": "2.5.3",
     "grunt-webpack": "1.0.8",
     "jit-grunt": "0.9.1",
-    "jshint": "2.6.3",
+    "jshint": "2.7.0",
     "jshint-loader": "0.8.3",
     "karma": "0.12.31",
     "karma-chai": "0.1.0",
-    "karma-chrome-launcher": "0.1.7",
-    "karma-coverage": "0.2.7",
+    "karma-chrome-launcher": "0.1.8",
+    "karma-coverage": "0.3.1",
     "karma-firefox-launcher": "0.1.4",
     "karma-mocha": "0.1.10",
     "karma-phantomjs-launcher": "0.1.4",
     "karma-script-launcher": "0.1.0",
     "karma-sinon": "1.0.4",
-    "karma-spec-reporter": "0.0.16",
-    "time-grunt": "1.1.0",
-    "webpack": "1.7.3",
-    "webpack-dev-server": "1.7.0"
+    "karma-spec-reporter": "0.0.19",
+    "time-grunt": "1.1.1",
+    "webpack": "1.8.5",
+    "webpack-dev-server": "1.8.0"
   },
   "scripts": {
     "test": "grunt test"
@@ -61,7 +61,7 @@
     "mout": "0.11.0"
   },
   "peerDependencies": {
-    "js-data": ">= 1.5.7",
+    "js-data": ">=2.0.0-beta.3",
     "firebase": ">= 1.1.x"
   }
 }
