--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,7 @@
     "karma.start.js"
   ],
   "dependencies": {
-    "js-data": "2.0.0-rc.1",
+    "js-data": ">=2.0.0",
     "firebase": ">=1.1.x"
   }
 }
