--- a/package.json
+++ b/package.json
@@ -1,87 +1,101 @@
 {
-	"name": "js-data-firebase",
-	"description": "Firebase adapter for js-data.",
-	"version": "3.0.0-alpha.1",
-	"homepage": "http://www.js-data.io/docs/dsfirebaseadapter",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/js-data/js-data-firebase.git"
-	},
-	"author": "js-data-firebase project authors",
-	"licenses": [
-		{
-			"type": "MIT",
-			"url": "https://github.com/js-data/js-data-firebase/blob/master/LICENSE"
-		}
-	],
-	"keywords": [
-		"data",
-		"datastore",
-		"store",
-		"database",
-		"adapter",
-		"js-data",
-		"JSData",
-		"firebase"
-	],
-	"main": "./dist/js-data-firebase.js",
-	"standard": {
-		"parser": "babel-eslint",
-		"globals": [
-			"beforeEach",
-			"describe",
-			"assert",
-			"JSDataAdapterTests",
-			"it",
-			"JSData",
-			"localStorage",
-			"DSFirebaseAdapter"
-		]
-	},
-	"scripts": {
-		"bundle": "webpack --config webpack.config.js --colors",
-		"doc": "jsdoc -c conf.json src node_modules/js-data-adapter/src && node scripts/cleanup.js",
-		"lint": "repo-tools karma.start.js karma.conf.js scripts/*.js",
-		"min": "uglifyjs dist/js-data-firebase.js -o dist/js-data-firebase.min.js --source-map dist/js-data-firebase.min.map --source-map-url js-data-firebase.min.map -v -m -c --screw-ie8",
-		"version": "node scripts/version.js",
-		"banner": "node scripts/banner.js",
-		"gzip": "echo gzipped size: $(cat dist/js-data-firebase.min.js | gzip -f9 | wc -c)kb",
-		"build": "npm run lint && npm run bundle && npm run min && npm run version && npm run banner",
-		"karma": "karma start",
-		"quick": "npm run bundle && npm run karma",
-		"test": "npm run build && npm run karma",
-		"repo-tools": "repo-tools updates && repo-tools changelog && repo-tools authors",
-		"release": "npm test && npm run doc && npm run repo-tools",
-		"ci": "npm test && cat ./coverage/PhantomJS*/lcov.info | coveralls || true"
-	},
-	"peerDependencies": {
-		"js-data": "^3.0.0-alpha.19",
-		"firebase": ">=2.4.x"
-	},
-	"devDependencies": {
-		"babel-core": "6.7.2",
-		"babel-loader": "6.2.4",
-		"babel-polyfill": "6.7.2",
-		"babel-preset-es2015": "6.6.0",
-		"chai": "3.5.0",
-		"coveralls": "2.11.8",
-		"ink-docstrap": "1.1.4",
-		"js-data-adapter": "0.2.4",
-		"js-data-adapter-tests": "^2.0.0-alpha.16",
-		"js-data-repo-tools": "^0.2.0",
-		"jsdoc": "3.4.0",
-		"karma": "0.13.22",
-		"karma-browserstack-launcher": "0.1.10",
-		"karma-chai": "0.1.0",
-		"karma-coverage": "0.5.5",
-		"karma-mocha": "0.2.2",
-		"karma-phantomjs-launcher": "1.0.0",
-		"karma-sinon": "1.0.4",
-		"mocha": "2.4.5",
-		"mout": "0.12.0",
-		"phantomjs-prebuilt": "2.1.5",
-		"sinon": "1.17.3",
-		"uglify-js": "2.6.2",
-		"webpack": "1.12.14"
-	}
+  "name": "js-data-firebase",
+  "description": "Firebase adapter for js-data.",
+  "version": "3.0.0-alpha.1",
+  "homepage": "http://www.js-data.io/docs/dsfirebaseadapter",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/js-data/js-data-firebase.git"
+  },
+  "author": "js-data-firebase project authors",
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/js-data/js-data-firebase/blob/master/LICENSE"
+    }
+  ],
+  "keywords": [
+    "data",
+    "datastore",
+    "store",
+    "database",
+    "adapter",
+    "js-data",
+    "JSData",
+    "firebase"
+  ],
+  "main": "./dist/js-data-firebase.js",
+  "standard": {
+    "parser": "babel-eslint",
+    "rules": {
+      "no-unused-vars": [
+        2,
+        {
+          "vars": "all",
+          "args": "none"
+        }
+      ]
+    },
+    "globals": [
+      "beforeEach",
+      "describe",
+      "assert",
+      "JSDataAdapterTests",
+      "it",
+      "JSData",
+      "localStorage",
+      "DSFirebaseAdapter"
+    ]
+  },
+  "watch": {
+    "bundle": "{src,test}/*.js"
+  },
+  "scripts": {
+    "bundle": "webpack --config webpack.config.js --colors",
+    "bundle:watch": "npm-watch",
+    "doc": "jsdoc -c conf.json src node_modules/js-data-adapter/src && node scripts/cleanup.js",
+    "lint": "repo-tools lint src/**/*.js karma.start.js karma.conf.js scripts/*.js",
+    "min": "uglifyjs dist/js-data-firebase.js -o dist/js-data-firebase.min.js --source-map dist/js-data-firebase.min.map --source-map-url js-data-firebase.min.map -v -m -c --screw-ie8",
+    "version": "node scripts/version.js",
+    "banner": "node scripts/banner.js",
+    "gzip": "echo gzipped size: $(cat dist/js-data-firebase.min.js | gzip -f9 | wc -c)kb",
+    "build": "npm run lint && npm run bundle && npm run min && npm run version && npm run banner",
+    "karma": "karma start",
+    "quick": "npm run bundle && npm run karma",
+    "test": "npm run build && npm run karma",
+    "repo-tools": "repo-tools updates && repo-tools changelog && repo-tools authors",
+    "release": "npm test && npm run doc && npm run repo-tools",
+    "ci": "npm test && cat ./coverage/PhantomJS*/lcov.info | coveralls || true"
+  },
+  "peerDependencies": {
+    "js-data": "^3.0.0-alpha.19",
+    "firebase": ">=2.4.x"
+  },
+  "devDependencies": {
+    "babel-core": "6.7.2",
+    "babel-loader": "6.2.4",
+    "babel-polyfill": "6.7.2",
+    "babel-preset-es2015": "6.6.0",
+    "chai": "3.5.0",
+    "coveralls": "2.11.8",
+    "ink-docstrap": "1.1.4",
+    "js-data-adapter": "0.2.4",
+    "js-data-adapter-tests": "^2.0.0-alpha.16",
+    "js-data-repo-tools": "^0.2.0",
+    "jsdoc": "3.4.0",
+    "karma": "0.13.22",
+    "karma-browserstack-launcher": "0.1.10",
+    "karma-chai": "0.1.0",
+    "karma-coverage": "0.5.5",
+    "karma-mocha": "0.2.2",
+    "karma-phantomjs-launcher": "1.0.0",
+    "karma-sinon": "1.0.4",
+    "mocha": "2.4.5",
+    "mout": "0.12.0",
+    "phantomjs-prebuilt": "2.1.5",
+    "sinon": "1.17.3",
+    "uglify-js": "2.6.2",
+    "webpack": "1.12.14",
+    "npm-watch": "latest"
+  }
 }
