--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "js-data-firebase",
   "description": "Firebase adapter for js-data.",
-  "version": "2.1.1",
-  "homepage": "http://www.js-data.io/docs/dsfirebaseadapter",
+  "version": "3.0.0-alpha.1",
+  "homepage": "http://www.js-data.io/docs/firebaseadapter",
   "repository": {
     "type": "git",
     "url": "https://github.com/js-data/js-data-firebase.git"
   },
-  "author": {
-    "name": "Jason Dobry",
-    "url": "http://www.pseudobry.com",
-    "email": "jason.dobry@gmail.com"
-  },
+  "author": "js-data-firebase project authors",
   "licenses": [
     {
       "type": "MIT",
@@ -24,43 +20,82 @@
     "store",
     "database",
     "adapter",
+    "js-data",
+    "JSData",
     "firebase"
   ],
   "main": "./dist/js-data-firebase.js",
-  "devDependencies": {
-    "babel-core": "5.6.15",
-    "babel-loader": "5.2.2",
-    "grunt": "0.4.5",
-    "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-uglify": "0.9.1",
-    "grunt-contrib-watch": "0.6.1",
-    "grunt-karma": "0.11.2",
-    "grunt-karma-coveralls": "2.5.3",
-    "grunt-webpack": "1.0.11",
-    "jit-grunt": "0.9.1",
-    "jshint": "2.8.0",
-    "jshint-loader": "0.8.3",
-    "karma": "0.12.37",
-    "karma-chai": "0.1.0",
-    "karma-chrome-launcher": "0.2.0",
-    "karma-coverage": "0.4.2",
-    "karma-firefox-launcher": "0.1.6",
-    "karma-mocha": "0.2.0",
-    "karma-phantomjs-launcher": "0.2.0",
-    "karma-script-launcher": "0.1.0",
-    "karma-sinon": "1.0.4",
-    "karma-spec-reporter": "0.0.19",
-    "time-grunt": "1.2.1",
-    "webpack-dev-server": "1.10.1"
+  "standard": {
+    "parser": "babel-eslint",
+    "rules": {
+      "no-unused-vars": [
+        2,
+        {
+          "vars": "all",
+          "args": "none"
+        }
+      ]
+    },
+    "globals": [
+      "beforeEach",
+      "describe",
+      "assert",
+      "JSDataAdapterTests",
+      "it",
+      "JSData",
+      "localStorage",
+      "FirebaseAdapter"
+    ]
+  },
+  "watch": {
+    "bundle": "{src,test}/*.js"
   },
   "scripts": {
-    "test": "grunt test"
-  },
-  "dependencies": {
-    "mout": "0.11.0"
+    "bundle": "webpack --config webpack.config.js --colors",
+    "bundle:watch": "npm-watch",
+    "doc": "jsdoc -c conf.json src node_modules/js-data-adapter/src && node scripts/cleanup.js",
+    "lint": "repo-tools lint src/**/*.js karma.start.js karma.conf.js scripts/*.js",
+    "min": "uglifyjs dist/js-data-firebase.js -o dist/js-data-firebase.min.js --source-map dist/js-data-firebase.min.map --source-map-url js-data-firebase.min.map -v -m -c --screw-ie8",
+    "version": "node scripts/version.js",
+    "banner": "node scripts/banner.js",
+    "gzip": "echo gzipped size: $(cat dist/js-data-firebase.min.js | gzip -f9 | wc -c)kb",
+    "build": "npm run lint && npm run bundle && npm run min && npm run version && npm run banner",
+    "karma": "karma start",
+    "quick": "npm run bundle && npm run karma",
+    "test": "npm run build && npm run karma",
+    "repo-tools": "repo-tools updates && repo-tools changelog && repo-tools authors",
+    "release": "npm test && npm run doc && npm run repo-tools",
+    "ci": "npm test && cat ./coverage/PhantomJS*/lcov.info | coveralls || true"
   },
   "peerDependencies": {
-    "js-data": ">=2.0.0",
-    "firebase": ">=1.1.x"
+    "js-data": "^3.0.0-alpha.19",
+    "firebase": ">=2.4.x"
+  },
+  "devDependencies": {
+    "babel-core": "6.7.2",
+    "babel-loader": "6.2.4",
+    "babel-polyfill": "6.7.2",
+    "babel-preset-es2015": "6.6.0",
+    "chai": "3.5.0",
+    "coveralls": "2.11.8",
+    "ink-docstrap": "1.1.4",
+    "js-data-adapter": "0.2.4",
+    "js-data-adapter-tests": "^2.0.0-alpha.16",
+    "js-data-repo-tools": "^0.2.0",
+    "jsdoc": "3.4.0",
+    "karma": "0.13.22",
+    "karma-browserstack-launcher": "0.1.10",
+    "karma-chai": "0.1.0",
+    "karma-coverage": "0.5.5",
+    "karma-mocha": "0.2.2",
+    "karma-phantomjs-launcher": "1.0.0",
+    "karma-sinon": "1.0.4",
+    "mocha": "2.4.5",
+    "mout": "0.12.0",
+    "phantomjs-prebuilt": "2.1.5",
+    "sinon": "1.17.3",
+    "uglify-js": "2.6.2",
+    "webpack": "1.12.14",
+    "npm-watch": "latest"
   }
 }
