migrated to rollup.

--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,15 @@
+machine:
+  node:
+    version: 5.0.0
+
 dependencies:
   pre:
-    - bower install
-  cache_directories:
-    - "bower_components"
+    - npm i -g npm
+    - npm i -g bower
+    - npm i js-data@^3.0.0-beta.3
+    - npm i firebase@>=2.4.x
+    - bower i firebase@>=2.4.x
+
 test:
   override:
     - npm run ci
