Prepare for 3.0.0-beta.1

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "js-data-firebase",
   "description": "Firebase adapter for js-data.",
-  "homepage": "http://www.js-data.io/docs/firebaseadapter",
+  "homepage": "https://github.com/js-data-js-data-firebase",
   "repository": {
     "type": "git",
     "url": "https://github.com/js-data/js-data-firebase.git"
