--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-data-firebase",
   "description": "Firebase adapter for js-data.",
-  "version": "3.0.0-alpha.1",
+  "version": "3.0.0-beta.1",
   "homepage": "https://github.com/js-data/js-data-firebase",
   "repository": {
     "type": "git",
@@ -61,30 +61,26 @@
     "ci": "npm test && cat ./coverage/PhantomJS*/lcov.info | codecov"
   },
   "peerDependencies": {
-    "js-data": "^3.0.0-beta.3"
-  },
-  "dependencies": {
+    "js-data": "^3.0.0-beta.3",
     "firebase": ">=2.4.x"
   },
   "devDependencies": {
-    "babel-polyfill": "6.7.4",
+    "babel-polyfill": "6.8.0",
     "babel-preset-es2015-rollup": "1.1.1",
-    "js-data-adapter": "~0.6.1",
-    "js-data-adapter-tests": "^2.0.0-alpha.17",
+    "js-data-adapter": "0.6.1",
+    "js-data-adapter-tests": "^2.0.0-alpha.21",
     "js-data-repo-tools": "0.5.0",
     "karma": "0.13.22",
     "karma-browserstack-launcher": "0.1.11",
     "karma-chai": "0.1.0",
     "karma-coverage": "0.5.5",
-    "karma-mocha": "0.2.2",
+    "karma-mocha": "1.0.1",
     "karma-phantomjs-launcher": "1.0.0",
     "karma-sinon": "1.0.4",
     "mout": "1.0.0",
     "phantomjs-prebuilt": "2.1.7",
-    "rollup": "0.26.1",
+    "rollup": "0.26.2",
     "rollup-plugin-babel": "2.4.0",
-    "rollup-plugin-commonjs": "^2.2.1",
-    "rollup-plugin-node-resolve": "^1.5.0",
     "uglify-js": "2.6.2"
   }
 }
