--- a/package.json
+++ b/package.json
@@ -62,12 +62,14 @@
   },
   "peerDependencies": {
     "js-data": "^3.0.0-beta.5"
-      },
+  },
+  "dependencies": {
+    "js-data-adapter": "0.6.2",
+  },
   "devDependencies": {
     "babel-polyfill": "6.8.0",
     "babel-preset-es2015-rollup": "1.1.1",
     "firebase": ">=2.4.x",
-    "js-data-adapter": "0.6.2",
     "js-data-adapter-tests": "^2.0.0-alpha.21",
     "js-data-repo-tools": "0.5.0",
     "karma": "0.13.22",
