--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "js-data": "^3.0.0-beta.5"
   },
   "dependencies": {
-    "js-data-adapter": "0.6.2",
+    "js-data-adapter": "0.6.2"
   },
   "devDependencies": {
     "babel-polyfill": "6.8.0",
