--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "karma": "karma start",
     "mocha": "mocha -t 20000 -R dot -r babel-polyfill mocha.start.js",
     "cover": "nyc --require babel-polyfill --cache mocha -t 20000 -R dot mocha.start.js && nyc report --reporter=html",
-    "test": "npm run build && npm run karma && npm run mocha",
+    "test": "npm run build && npm run karma && npm run cover",
     "release": "npm test && npm run doc && repo-tools updates && repo-tools changelog && repo-tools authors"
   },
   "peerDependencies": {
