--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "mout": "0.11.0"
+    "mout": "0.11.0",
+    "webpack": "^1.13.1"
   },
   "peerDependencies": {
     "js-data": ">=2.0.0",
