--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-data-firebase",
   "description": "Firebase adapter for js-data.",
-  "version": "3.0.0-beta.2",
+  "version": "3.0.0-rc.1",
   "homepage": "https://github.com/js-data/js-data-firebase",
   "repository": {
     "type": "git",
@@ -63,23 +63,23 @@
     "release": "npm test && npm run doc && repo-tools updates && repo-tools changelog && repo-tools authors"
   },
   "peerDependencies": {
-    "js-data": "^3.0.0-beta.6",
-    "firebase": ">=3.0.0"
+    "firebase": "^3.6.3",
+    "js-data": "3.0.0-rc.6"
   },
   "dependencies": {
-    "js-data-adapter": "0.7.2"
+    "js-data-adapter": "0.8.3"
   },
   "devDependencies": {
-    "js-data-repo-tools": "0.5.2",
-    "karma": "0.13.22",
-    "karma-browserstack-launcher": "1.0.0",
+    "js-data-repo-tools": "0.5.9",
+    "jsdoc": "^3.4.3",
+    "karma": "1.3.0",
+    "karma-browserstack-launcher": "1.1.1",
     "karma-chai": "0.1.0",
-    "karma-mocha": "1.0.1",
-    "karma-phantomjs-launcher": "1.0.0",
+    "karma-mocha": "1.3.0",
+    "karma-phantomjs-launcher": "1.0.2",
     "karma-sinon": "1.0.5",
     "mout": "1.0.0",
-    "phantomjs-prebuilt": "2.1.7",
-    "rollup-plugin-replace": "^1.1.0",
-    "uglify-js": "2.6.2"
+    "phantomjs-prebuilt": "2.1.14",
+    "uglify-js": "2.7.5"
   }
 }
