--- a/circle.yml
+++ b/circle.yml
@@ -4,18 +4,17 @@ general:
       - gh-pages
 machine:
   node:
-    version: 5.7.0
+    version: 6.11.2
 dependencies:
   pre:
     - npm i -g npm
     - npm i -g nyc codecov
-    - npm i js-data@^3.0.0-beta.6 firebase
 test:
   pre:
     - echo $KARMA_CONFIG > config.js
     - echo $KEYFILE > key.json
   post:
-    - nyc report --reporter=lcov | codecov
+    - nyc report --reporter=lcov > coverage.lcov && codecov
 general:
   artifacts:
     - "dist"
