--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-data-firebase",
   "description": "Firebase adapter for js-data.",
-  "version": "3.0.0-rc.1",
+  "version": "3.0.0",
   "homepage": "https://github.com/js-data/js-data-firebase",
   "repository": {
     "type": "git",
@@ -15,7 +15,8 @@
     "dist/",
     "src/",
     "AUTHORS",
-    "CONTRIBUTORS"
+    "CONTRIBUTORS",
+    "typings.json"
   ],
   "keywords": [
     "data",
@@ -44,42 +45,55 @@
       "config.default.js"
     ]
   },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
-  },
   "scripts": {
-    "lint": "repo-tools lint \"**/*.js\"",
-    "bundle": "rollup src/index.js -c -o dist/js-data-firebase.js -m dist/js-data-firebase.js.map -f umd && repo-tools write-version dist/js-data-firebase.js",
+    "lint": "standard lint",
     "doc": "jsdoc -c conf.json src node_modules/js-data-adapter/src",
-    "min": "uglifyjs dist/js-data-firebase.js -o dist/js-data-firebase.min.js --source-map dist/js-data-firebase.min.map --source-map-url js-data-firebase.min.map -v -m -c --screw-ie8",
+    "bundle": "rollup src/index.js -c -o dist/js-data-firebase.js -m dist/js-data-firebase.js.map -f umd && repo-tools write-version dist/js-data-firebase.js",
+    "min": "uglifyjs -o dist/js-data-firebase.min.js --source-map url=js-data-firebase.min.map -v -m -c --keep-fnames --screw-ie8 -- dist/js-data-firebase.js",
     "banner": "node scripts/banner.js",
     "build": "npm run lint && npm run bundle && npm run min && npm run banner",
     "karma": "karma start",
     "mocha": "mocha -t 20000 -R dot -r babel-polyfill mocha.start.js",
     "cover": "nyc --require babel-polyfill --cache mocha -t 20000 -R dot mocha.start.js && nyc report --reporter=html",
     "test": "npm run build && npm run karma && npm run cover",
-    "release": "npm test && npm run doc && repo-tools updates && repo-tools changelog && repo-tools authors"
+    "release": "npm test && npm run doc && repo-tools changelog && repo-tools authors"
   },
   "peerDependencies": {
-    "firebase": "^3.6.3",
-    "js-data": "3.0.0-rc.6"
+    "firebase": ">= 3.6.3",
+    "js-data": ">= 3.0.0"
   },
   "dependencies": {
-    "js-data-adapter": "0.8.3"
+    "firebase": ">= 3.6.3",
+    "js-data": ">= 3.0.0",
+    "js-data-adapter": "1.0.0"
   },
   "devDependencies": {
-    "js-data-repo-tools": "0.5.9",
-    "jsdoc": "^3.4.3",
-    "karma": "1.3.0",
-    "karma-browserstack-launcher": "1.1.1",
+    "babel-core": "6.26.0",
+    "babel-eslint": "7.2.3",
+    "babel-plugin-external-helpers": "6.22.0",
+    "babel-plugin-syntax-async-functions": "6.13.0",
+    "babel-plugin-transform-regenerator": "6.26.0",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "chai": "4.1.1",
+    "ink-docstrap": "git+https://github.com/js-data/docstrap.git#cfbe45fa313e1628c493076d5e15d2b855dfbf2c",
+    "istanbul": "0.4.5",
+    "js-data-repo-tools": "1.0.0",
+    "jsdoc": "3.5.4",
+    "karma": "1.7.0",
+    "karma-browserstack-launcher": "1.3.0",
     "karma-chai": "0.1.0",
     "karma-mocha": "1.3.0",
-    "karma-phantomjs-launcher": "1.0.2",
+    "karma-phantomjs-launcher": "1.0.4",
     "karma-sinon": "1.0.5",
-    "mout": "1.0.0",
-    "phantomjs-prebuilt": "2.1.14",
-    "uglify-js": "2.7.5"
+    "mocha": "3.5.0",
+    "nyc": "11.1.0",
+    "phantomjs-prebuilt": "2.1.15",
+    "rollup": "0.48.2",
+    "rollup-plugin-babel": "3.0.2",
+    "sinon": "3.2.1",
+    "standard": "10.0.3",
+    "uglify-js": "3.0.28"
   }
 }
