--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
     "chai": "4.1.1",
+    "dotenv": "^8.0.0",
     "ink-docstrap": "git+https://github.com/js-data/docstrap.git#cfbe45fa313e1628c493076d5e15d2b855dfbf2c",
     "istanbul": "0.4.5",
     "js-data-repo-tools": "1.0.0",
